@startuml

title __SERVLET's Class Diagram__\n

  namespace Servlet {
    class Servlet.ContextListener {
        {static} - logger : Logger
        + contextDestroyed()
        + contextInitialized()
    }
  }
  

  namespace Servlet {
    class Servlet.EmployeeAuthenticationServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doPost()
    }
  }
  

  namespace Servlet {
    class Servlet.EmployeeLogoutServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doGet()
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerAuthenticationServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doPost()
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerLogoutServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doGet()
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerViewAllEmployeeServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doGet()
    }
  }
  

  namespace Servlet {
    class Servlet.ManagerViewReimbursementServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doGet()
    }
  }
  

  namespace Servlet {
    class Servlet.ProcessReimbursementRequestServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doPost()
    }
  }
  

  namespace Servlet {
    class Servlet.ReimbursementRequestServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doPost()
    }
  }
  

  namespace Servlet {
    class Servlet.ViewEmployeeServlet {
        {static} - logger : Logger
        - om : ObjectMapper
        + init()
        # doGet()
        # doPost()
    }
  }
  

  namespace Servlet {
    class Servlet.ViewReimbursementRequestEmployee {
        {static} - logger : Logger
        - om : ObjectMapper
        # doGet()
    }
  }
  

  Servlet.ContextListener .up.|> javax.servlet.ServletContextListener
  Servlet.EmployeeAuthenticationServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.EmployeeLogoutServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerAuthenticationServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerLogoutServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerViewAllEmployeeServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ManagerViewReimbursementServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ProcessReimbursementRequestServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ReimbursementRequestServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ViewEmployeeServlet -up-|> javax.servlet.http.HttpServlet
  Servlet.ViewReimbursementRequestEmployee -up-|> javax.servlet.http.HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
